starter code for Fragrance site

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/app.css" />
+    <link rel="shortcut icon" href="assets/images/logoofficial.png" type="image/x-icon">
     <title>L'Essence du Luxe</title>
   </head>
   <body>
@@ -217,8 +218,9 @@
                         <p>Our exclusive technique focuses on understanding fragrance families and how they interact with your skin's natural chemistry.</p>
                         <a href="#" class="read-more">Read the full article →</a>
                     </div>
-                    <div class="blog-image-container"></div>
-                    <img src="" alt="">
+                    <div class="blog-image-container">
+                    <img src="assets/images/layering.jpg" alt="layering image">
+                    </div>
                 </div>
                 <div class="testimonials">
                     <div class="testimonials-header">
@@ -228,7 +230,7 @@
                         <div class="testimonial">
                             <p class="testimonial-quote">The Amber Velvet fragrance has become my signature scent. I receive compliments everywhere I go. The longevity is exceptional—it lasts throughout my entire workday.</p>
                             <div class="testimonial-author">
-                                <div class="author-image" style="background-image: url('/api/placeholder/50/50');"></div>
+                                <div class="author-image"></div>
                                 <div class="author-info">
                                     <div class="author-name">Sophia Laurent</div>
                                     <div class="author-title">Fashion Editor</div>
@@ -239,7 +241,7 @@
                         <div class="testimonial">
                             <p class="testimonial-quote">Royal Oud is sophistication in a bottle. The blend of notes is masterfully done, creating a complex and evolving scent that never feels overwhelming. Worth every penny.</p>
                             <div class="testimonial-author">
-                                <div class="author-image" style="background-image: url('/api/placeholder/50/50');"></div>
+                                <div class="author-image" ></div>
                                 <div class="author-info">
                                     <div class="author-name">James Mitchell</div>
                                     <div class="author-title">Executive Chef</div>
@@ -250,7 +252,7 @@
                         <div class="testimonial">
                             <p class="testimonial-quote">The body wash and lotion perfectly complement my Ethereal Musk perfume. The layering effect creates a subtle but noticeable aura that lasts all day. Incredible quality.</p>
                             <div class="testimonial-author">
-                                <div class="author-image" style="background-image: url('/api/placeholder/50/50');"></div>
+                                <div class="author-image"></div>
                                 <div class="author-info">
                                     <div class="author-name">Elena Rodriguez</div>
                                     <div class="author-title">Interior Designer</div>
@@ -298,8 +300,8 @@
                 <div class="contact-info">
                     <span class="contact-icon">⌖</span>
                     <span>15 Rue de Parfum, Paris, France</span>
-                </div>    
-                <h4 style="margin-top: 25px; font-size: 1.1em; color: #ddd;">Join Our Newsletter</h4>
+                </div> 
+                <h4>Join Our Newsletter</h4>
                 <form class="newsletter-form">
                     <input type="email" class="newsletter-input" placeholder="Your email address">
                     <button type="submit" class="newsletter-button">JOIN</button>
